# ai-utils

./: .gitignore  LICENSE  README.md  VERSION.av  ai.1  ai.c  aicodec.c  aifmt.in  aifmt.service.in  air.1  air.c  loadimage.c  meson.build  postinst.in  prerm.in  unai.1  unai.c
debian/: air.install  changelog  control  copyright  rules
